--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="logo">Food Recipes</div>
             <ul class="nav-links">
                 <li><a href="#appetize">Appetizers</a></li>
-                <li><a href="#dish">Main Courses</a></li>
+                <li><a href="#dish">Main Dishes</a></li>
                 <li><a href="#dessert">Desserts</a></li>
                 <li><a href="#drink">Drinks</a></li>
             </ul>
